Trying Random CSS

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
+    <h1 class="title">Lasagna Recipe</h1>
     <a href="../index.html">Home</a>
     <img src="img/lasagna.jpeg" alt="Lasagna">
 
