--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li> <a href = "recipes/pasta.html">Pesto Pasta</a></li>
-        <li> <a href = "recipes/lasagna.html">Lasagna</a></li>
-        <li> <a href = "recipes/garlic_chicken.html">Garlic Chicken</a></li>
-    </ul>
-   
+    <div class="flexbox">
+        <div class="title"><h1>Odin Recipes</h1></div>
+        
+        <div class="recipes">
+            
+            <div class="list">
+                <ol>
+                    <li class="items"> <a href = "recipes/pasta.html">Pesto Pasta</a></li>
+                    <li class="items"> <a href = "recipes/lasagna.html">Lasagna</a></li>
+                    <li class="items"> <a href = "recipes/garlic_chicken.html">Garlic Chicken</a></li>
+                </ol>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
