--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasta</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Pesto Pasta Recipe</h1>
+    <h1 class="title">Pesto Pasta Recipe</h1>
     <a href="../index.html">Home</a>
     <img src="img/pasta.jpeg" alt="Pesto Pasta">
 
